Updated the software side to be a bit cleaner

--- a/software/Makefile
+++ b/software/Makefile
@@ -19,15 +19,12 @@ $(BIN_DIR)/%.o: $(INC_DIR)/%.c $(DEPS)
 $(BIN_DIR)/%.o: $(INC_DIR)/%.cpp $(DEPS)
 	$(CPP) -c -o $@ $< $(CFLAGS)
 
-all: sw_access_test clear_output sw_only 
+all: sw_access_test clear_output sw_sobel hw_sobel 
 
-sw_access_test: $(COBJS)
-	$(CPP) $(SRC_DIR)/$@.cpp -o $(BIN_DIR)/$@ $^ $(CFLAGS) $(OPENCV_ARGS)
-
-clear_output: $(COBJS)
+sw_sobel: $(COBJS)
 	 $(CPP) $(SRC_DIR)/$@.cpp -o $(BIN_DIR)/$@ $^ $(CFLAGS) $(OPENCV_ARGS)	
 
-sw_only: $(COBJS)
+hw_sobel: $(COBJS)
 	 $(CPP) $(SRC_DIR)/$@.cpp -o $(BIN_DIR)/$@ $^ $(CFLAGS) $(OPENCV_ARGS)	
 
 clean:
